# python-sdk

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pytest.yml
src/: __init__.py  phase.py  sdk.py  version.py
src/phase/: __init__.py  phase.py  version.py
src/phase/utils/: const.py  crypto.py  misc.py  network.py  phase_io.py  secret_referencing.py
tests/: test_crypto.py  test_decrypt.py  test_encrypt.py  test_init.py  test_secret_referencing.py
