[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phase_dev"
version = "2.0.1"
description = "Python SDK for Phase secrets manager"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
    { name = "Phase", email = "rohan@phase.dev" }
]
dependencies = [
    "pyNaCl >= 1.4.0",
    "requests >= 2.26.0",
]

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]

[project.urls]
"Homepage" = "https://phase.dev"
"Documentation" = "https://docs.phase.dev"
